Move StringTokenizer and StringTokenizerTests.cpp to rct from here:
https://github.com/Andersbakken/rtags/commits/master/src/StringTokenizer.h
https://github.com/Andersbakken/rtags/commits/master/src/StringTokenizerTests.cpp

Since it's a general purpose utility class I think it belongs over
here.

Also, we don't have traditional unit tests in rtags but we do in rtags
this enables better testing.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /Makefile
 /CMakeFiles/rct.dir/src/Value.cpp.o.d
-/cmake_install.cmake
+*/cmake_install.cmake
 /include/rct/rct-config.h
 /librct.a
 /CMakeFiles/
@@ -17,3 +17,7 @@
 /dbtest
 /build/*
 /tests/testfile_Äßéמש最終.txt
+/tests/CMake*
+/tests/CTest*
+/tests/ChildProcess*
+/tests/rct_tests
