Move StringTokenizer and StringTokenizerTests.cpp to rct from here:
https://github.com/Andersbakken/rtags/commits/master/src/StringTokenizer.h
https://github.com/Andersbakken/rtags/commits/master/src/StringTokenizerTests.cpp

Since it's a general purpose utility class I think it belongs over
here.

Also, we don't have traditional unit tests in rtags but we do in rtags
this enables better testing.

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,22 @@
-/Makefile
-/CMakeFiles/rct.dir/src/Value.cpp.o.d
-/cmake_install.cmake
-/include/rct/rct-config.h
-/librct.a
-/CMakeFiles/
+*/cmake_install.cmake
 /.gdb_history
-/rct-config.h
-/librct.so
-/librct.dylib
+/.ninja_deps
 /.ninja_log
 /CMakeCache.txt
+/CMakeFiles/*
+/Makefile
 /build.ninja
-/rules.ninja
-/.ninja_deps
+/build/*
 /compile_commands.json
 /dbtest
-/build/*
-/tests/testfile_Äßéמש最終.txt
-/tests/CTestTestfile.cmake
-/tests/cmake_install.cmake
+/include/rct/rct-config.h
+/librct.*
+/rct-config.h
+/rules.ninja
+/tests/CMake*
 /tests/CMakeFiles/
-/tests/ChildProcess
+/tests/CTest*
+/tests/ChildProcess*
+/tests/cmake_install.cmake
 /tests/rct_tests
-/tests/ChildProcess_Äßéמש最終
+/tests/testfile_Äßéמש最終.txt
