--- a/.travis.yml
+++ b/.travis.yml
@@ -31,16 +31,15 @@ matrix:
                       - g++-4.9
                       - libcppunit-dev
 
-        - env: COMPILER_VERSION=3.8
+        - env: COMPILER_VERSION=5.0
           os: linux
           compiler: clang++
           addons:
               apt:
                   sources:
-                      - ubuntu-toolchain-r-test
-                      - llvm-toolchain-precise-3.8
+                      - llvm-toolchain-trusty-5.0
                   packages:
-                      - clang-3.8
+                      - clang-5.0
                       - libcppunit-dev
 
 before_script:
